StarSpan ChangeLog
$Id$


2008-05-07 (1.0.08)
    - starspan_create_strip(): Explicitly assigning the geoTransform to the 
      generated strips. It uses the geoTransform from the first miniraster but
      sets the origin point to be (0,0). 
      In particular, for the --mini_raster_strip command with shapefile creation,
      this adjustment makes the generated datasets to match properly.
    
    - Since starspan now checks that the projection of the input datasets be
      the same, I converted the polygon shapefile for the current tests to
      match the projection of the raster files:
        cd tests/data/vector
        ogr2ogr -t_srs "+proj=utm +zone=10 +ellps=WGS84 +datum=WGS84 +units=m +no_defs" \
        ply/ply.shp starspan_testply.shp
      Also converted the other shapefiles for future use.
      (cd tests && make) # -> OK
                 
2008-05-01,02
    - Refactoring miniraster strip creation to allow duplicate pixel handling:
      - MiniRasterObserver: no Traverser as a member any more.
      - IntersectionInfo: now includes the traverser.
      - MiniRasterStripObserver: setOutVector() and setOutVectorDirectly()
        to allow association of output vector either with no ownership or with
        ownership.
      - MiniRasterStripObserver.create_strip() removed. Instead, this functionality
        was moved to new utility starspan_create_strip().
      - New starspan_getMiniRasterStripObserver2() and starspan_minirasterstrip2()
        to handle the generation of the strip with duplicate_pixel modes.
      - TODO: complete preliminary tests.
    
    
2008-04-24
    - GRASS interface documentation updated in web site: 
        http://starspan.casil.ucdavis.edu/doku/doku.php?id=grass

    - Rasterization process documented in: 
        http://starspan.casil.ucdavis.edu/doku/doku.php?id=rasterization
      --rasterize option still internal for testing purposes.
      Also added rasterize command to GRASS interface to facilitate this